# snora

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.ja.md  README.md  ROADMAP.md  version.sh
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: downstream-feedback.yml  feature-request.yml
.github/workflows/: binary-size.yaml  build-cost.yaml  ci.yaml
crates/snora/: Cargo.toml
crates/snora-core/: Cargo.toml
crates/snora-core/src/: contract.rs  crumb.rs  direction.rs  icon.rs  layout.rs  lib.rs  menu.rs  overlay.rs  sidebar.rs  tab.rs  toast.rs
crates/snora-core/src/contract/: app.rs  page.rs  rtl.rs  stack.rs  ui.rs
crates/snora-core/src/contract/app/: bottom_sheet.rs  side_bar.rs
crates/snora-core/src/contract/app/header/: menu.rs
crates/snora-design/: Cargo.toml
crates/snora-design/src/: color.rs  contrast.rs  focus.rs  lib.rs  palette.rs  presets.rs  radius.rs  spacing.rs  tests.rs  tokens.rs  typography.rs  variants.rs
crates/snora-design/src/color/: tests.rs
crates/snora-design/src/contrast/: tests.rs
crates/snora-design/src/focus/: tests.rs
crates/snora-design/src/presets/: dark.rs  high_contrast_dark.rs  high_contrast_light.rs  light.rs
crates/snora-design/src/radius/: tests.rs
crates/snora-design/src/spacing/: tests.rs
crates/snora-design/src/typography/: tests.rs
crates/snora-design/src/variants/: tests.rs
crates/snora-widgets/: Cargo.toml
crates/snora-widgets/src/: crumb.rs  design.rs  footer.rs  header.rs  icon.rs  lib.rs  menu.rs  sidebar.rs  style.rs  tab.rs
crates/snora-widgets/src/design/: button.rs  card.rs  chip.rs  notice.rs  progress.rs  style.rs
crates/snora-widgets/src/design/chip/: tests.rs
crates/snora-widgets/src/design/notice/: tests.rs
crates/snora-widgets/src/design/progress/: tests.rs
crates/snora-widgets/src/design/style/: button.rs  color.rs  container.rs  progress.rs  text.rs
crates/snora-widgets/src/design/style/progress/: tests.rs
crates/snora/src/: design.rs  direction.rs  keyboard.rs  layout.rs  lib.rs  overlay.rs  render.rs  stack.rs  style.rs  toast.rs  widget.rs
crates/snora/src/components/: app.rs  footer.rs  header.rs  icon.rs
crates/snora/src/components/app/: footer.rs  header.rs  side_bar.rs
crates/snora/src/components/app/header/: menu.rs
crates/snora/src/design/: tests.rs
crates/snora/src/layout/: app.rs  page.rs
crates/snora/src/overlay/: bottom_sheet.rs  dialog.rs  sheet.rs
crates/snora/src/stack/: bottom_sheet.rs  dialog.rs  toast.rs
crates/snora/src/widget/: header.rs  icon.rs  menu.rs  sidebar.rs
crates/snora/tests/: render_semantics.rs
docs/: README.md  book.toml
docs/contributing/: adding-an-overlay.md  architecture.md  design-decisions.md  release-process.md
docs/getting-started/: 01-install.md  04-toasts.md  05-when-to-use.md
docs/guides/: direction.md  migration-0.4-to-0.5.md  overlays.md
docs/reference/: architecture.md  vocabulary.md  widgets.md
docs/src/: SUMMARY.md  introduction.md
examples/: README.md
examples/bottom_sheet/: Cargo.toml
examples/bottom_sheet/src/: main.rs
examples/breadcrumb/: Cargo.toml
examples/breadcrumb/src/: main.rs
examples/context_menu/: Cargo.toml
examples/context_menu/src/: main.rs
examples/design_workbench/: Cargo.toml
examples/design_workbench/src/: main.rs
examples/dialog/: Cargo.toml
examples/dialog/src/: main.rs
examples/header_menu/: Cargo.toml
examples/header_menu/src/: main.rs
examples/hei_snora/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/multi_view/: Cargo.toml
examples/multi_view/src/: main.rs
examples/rtl/: Cargo.toml
examples/rtl/src/: main.rs
examples/sheet/: Cargo.toml
examples/sheet/src/: main.rs
examples/size_probe_design/: Cargo.toml
examples/size_probe_engine/: Cargo.toml
examples/size_probe_widgets/: Cargo.toml
examples/size_probe_widgets/src/: main.rs
examples/skeleton/: Cargo.toml
examples/skeleton/src/: main.rs
examples/starter/: Cargo.toml
examples/tab/: Cargo.toml
examples/tab/src/: main.rs
examples/toast/: Cargo.toml
examples/toast/src/: main.rs
examples/workbench/: Cargo.toml
rfcs/: README.md
rfcs/done/: 011-a-main-rust-ci-quality-gate.md  011-b-toast-ordering-semantics-fix.md  011-c-app-layout-construction-stability.md  011-d-render-semantics-test-harness.md  011-e-overlay-interaction-semantics.md  012-a-abdd-compliance-checklist.md  012-b-showcase-workbench-example.md  012-c-compile-time-tracking.md  012-d-documentation-and-doctest-policy.md  013-a-anchored-popover-design-study.md  013-b-public-api-freeze-readiness.md  013-c-tooltip-vocabulary-and-persistent-toast-helper.md  014-a-keyboard-navigation-and-dismissal-policy.md  014-b-focus-and-modal-accessibility-boundary.md  014-c-theme-boundary-and-warning-palette-policy.md  014-d-icon-asset-and-feature-gating-policy-v2.md  014-e-examples-acceptance-matrix.md  015-a-versioning-migration-and-deprecation-bridges.md  015-b-crate-reexport-and-docsrs-policy.md  015-c-starter-application-template.md  015-d-design-decision-register-maturity.md  016-a-alternate-engine-boundary-assessment.md  016-b-performance-envelope-and-render-cost-budget.md  016-c-downstream-adoption-and-feedback-program.md  017-a-1-0-gate-advancement.md  017-b-rtl-render-semantics-tests.md  017-c-documentation-test-policy-enforcement.md  017-d-first-build-cost-data-point.md  017-e-api-freeze-review-update.md  018-a-version-number-maintenance.md  018-b-gate-7-close-out.md  018-c-contributing-index-and-cross-links.md  019-a-lucide-icons-type-parameter-fix.md  020-design-system-boundary-and-philosophy.md  021-crate-and-feature-architecture.md  022-token-data-model.md  023-palettes-high-contrast-and-contrast-tests.md  024-typography-leading-spacing-radius-focus-density.md  025-iced-style-bridge.md  026-feature-matrix-ci-and-quality-gates.md  (+8 more)
rfcs/proposed/: 012-a-abdd-compliance-checklist.md  012-b-showcase-workbench-example.md  (+21 more)
scripts/: README.md  append-binary-size-row.sh  measure-binary-size.sh  measure-compile-time.sh  measure-render-cost.sh
(+85 files in other folders)
