[package]
name = "snora-core"
version.workspace = true
edition.workspace = true
description = "Vocabulary and contract layer for the Snora iced GUI framework."
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["gui", "iced", "ui", "framework"]
categories = ["gui"]

[features]
# When enabled, the `Icon::Lucide` variant is compiled in.
lucide-icons = ["dep:lucide-icons"]
# When enabled, the `Icon::Svg` variant is compiled in. This only affects the
# core vocabulary; actual SVG rendering is done by the `snora` crate with the
# matching feature.
svg-icons = []

[dependencies]
lucide-icons = { workspace = true, optional = true }
