[package]
name = "snora-widgets"
version.workspace = true
edition.workspace = true
description = "Optional prefab iced widgets for the Snora GUI framework — header, footer, sidebar, menu, icon."
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
categories = ["gui"]
keywords = ["gui", "iced", "ui", "framework"]

[features]
# Pass-through to snora-core's icon-source features. Applications that
# enable `snora/lucide-icons` automatically light up the matching path
# in this crate.
lucide-icons = ["snora-core/lucide-icons", "dep:lucide-icons"]
svg-icons = ["snora-core/svg-icons", "iced/svg"]

[dependencies]
snora-core = { path = "../snora-core", version = "0.6" }
iced = { workspace = true }
lucide-icons = { workspace = true, optional = true }
