[package]
name = "snora-widgets"
description = "Optional prefab iced widgets for the Snora GUI framework — header, footer, sidebar, menu, icon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["gui", "iced", "ui", "framework"]
categories = ["gui"]

[features]
# When enabled, exposes the Snora Design style bridge (`snora_widgets::design`).
# Pulls in the iced-free `snora-design` token crate. This feature is opt-in
# and does NOT activate by default; it targets the v0.20 release surface.
design = ["dep:snora-design"]
# Pass-through to snora-core's icon-source features. Applications that
# enable `snora/lucide-icons` automatically light up the matching path
# in this crate.
lucide-icons = ["snora-core/lucide-icons", "dep:lucide-icons"]
svg-icons = ["snora-core/svg-icons", "iced/svg"]

[dependencies]
snora-core = { workspace = true }
snora-design = { workspace = true, optional = true }
iced = { workspace = true }
lucide-icons = { workspace = true, optional = true }
