[package]
name = "snora"
version.workspace = true
edition.workspace = true
description = "iced engine for the Snora GUI framework. Consumes snora-core vocabulary."
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
categories    = ["gui", "development-tools", "accessibility", "asynchronous"]
keywords = ["gui", "iced", "ui", "framework", "rtl"]

[features]
default = []
lucide-icons = ["snora-core/lucide-icons", "dep:lucide-icons"]
svg-icons = ["snora-core/svg-icons", "iced/svg"]

[dependencies]
snora-core = { path = "../snora-core", version = "0.4" }
iced = { workspace = true }
lucide-icons = { workspace = true, optional = true }
