[package]
name = "snora"
description = "iced engine for the Snora GUI framework. Consumes snora-core vocabulary."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["gui", "iced", "ui", "framework", "rtl"]
categories = ["gui", "development-tools", "accessibility", "asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# `widgets` is on by default — most applications want the prefab
# header / sidebar / footer / menu / icon helpers. Opt out with
# `default-features = false` to ship an engine-only build.
default = ["widgets"]

# Pulls in the snora-widgets crate and re-exports it under the
# `snora::widget` module path (preserving the 0.5.x import shape).
widgets = ["dep:snora-widgets"]

# Enables the Snora Design style bridge. Activates the `design` feature on
# `snora-widgets` (which pulls in the iced-free `snora-design` token crate)
# and re-exports the style bridge and token types under `snora::design`.
# Opt-in by policy; default-on requires an explicit size/build-cost review
# and a future RFC or release decision. Measurement data tracked in
# docs/src/reference/binary-size-budget.md and build-cost-budget.md.
# Requires the `widgets` feature; enabling `design` without `widgets` is a
# no-op except for the snora-design token types.
design = ["widgets", "dep:snora-design", "snora-widgets?/design"]

# Icon-source features. They configure both `snora-core` (vocabulary)
# and `snora-widgets` (rendering) when the latter is enabled.
lucide-icons = [
    "snora-core/lucide-icons",
    "snora-widgets?/lucide-icons",
    "dep:lucide-icons",
]
svg-icons = [
    "snora-core/svg-icons",
    "snora-widgets?/svg-icons",
    "iced/svg",
]

[dependencies]
snora-core = { workspace = true }
snora-widgets = { workspace = true, optional = true }
snora-design = { workspace = true, optional = true }
iced = { workspace = true }
lucide-icons = { workspace = true, optional = true }

[dev-dependencies]
# Headless test harness for render-semantics tests (RFC-011-D).
# Dev-only: no impact on binary size or public feature surface.
iced_test = "0.14"
