[package]
name = "snora-example-context-menu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "snora-example-context-menu"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora" }
iced = { workspace = true }
