[package]
name = "snora-example-hello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "snora-example-hello"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora", version = "0.5.0" }
iced = { workspace = true }
