[package]
name = "snora-example-multi-view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "snora-example-multi-view"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora" }
iced = { workspace = true }
