[package]
name = "snora-example-multi-view"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "snora-example-multi-view"
path = "src/main.rs"

[dependencies]
snora = { workspace = true }
iced = { workspace = true }
