[package]
name = "snora-example-rtl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "snora-example-rtl"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora" }
iced = { workspace = true }
