[package]
name = "snora-example-rtl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "snora-example-rtl"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora", version = "0.5.0" }
iced = { workspace = true }
