[package]
name = "snora-example-tab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "snora-example-tab"
path = "src/main.rs"

[dependencies]
snora = { workspace = true }
iced = { workspace = true }
