[package]
name = "snora-example-toast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "snora-example-toast"
path = "src/main.rs"

[dependencies]
snora = { path = "../../crates/snora", version = "0.6.0" }
iced = { workspace = true }
